# kintaro

./: .gitignore  README.md
.devcontainer/: .bashrc_private  devcontainer.json  docker-compose.yml  on-create.sh  post-attach.sh
.github/workflows/: prd.workflow.yaml
app/: app.py  crawler.py  job.py  pyproject.toml  send_message.py
app/lib/: env.py
app/lib/app/: auth.py  env.py  schema.py  util.py
app/lib/common/: model.py  secrets.py  util.py
app/static/css/: common.css
app/static/js/: component.js  utils.js
app/templates/: base.html  index.html  login.html  new_password.html
app/templates/timecard/: index.html
docker/app/: Dockerfile
docker/devcontainer/: Dockerfile
docker/localstack/init/ready.d/: init-aws.sh
docs/: deploy.md  developers_guide.md  initial_deploy.md  usage.md
kustomize/base/: app.yaml  configmap.yaml  crawler.yaml  job.yaml  kustomization.yaml  namespace.yaml
kustomize/overlays/prd/: app_deployment.patch.yaml  app_ingress.patch.yaml  app_service_account.patch.yaml  configmap.patch.yaml  crawler_cronjob.patch.yaml  crawler_service_account.patch.yaml  job_scaled_job.patch.yaml  job_service_account.patch.yaml  job_trigger_authentication.patch.yaml  kustomization.yaml  scaled_job.patch.yaml  trigger_authentication.patch.yaml
src/: main.py
terraform/env/prd/: .terraform.lock.hcl  main.tf  secrets.auto.tfvars.sample  variables.tf
